# langfuse-examples

./: .env  README.md  exemplo-01-simple-requisition.py  exemplo-02-simple-requisition-with-decorator.py  exemplo-03-chat.py  exemplo-04-langchain.py  exemplo-05-langgraph.py  exemplo-06-llm-as-a-judge.py  llm.py  pyproject.toml
